--- a/src/R/pcgrr/inst/templates/acmg/tier3_acmg.Rmd
+++ b/src/R/pcgrr/inst/templates/acmg/tier3_acmg.Rmd
@@ -33,7 +33,7 @@ variants_tsgene_shared <- crosstalk::SharedData$new(pcg_report[['snv_indel']][['
 crosstalk::bscols(
   list(
     crosstalk::filter_select("CONSEQUENCE", "Consequence", variants_tsgene_shared, ~CONSEQUENCE),
-    crosstalk::filter_select("CANCER_MUTATION_HOTSPOT", "Mutation hotspot", variants_tsgene_shared, ~CANCER_MUTATION_HOTSPOT)
+    crosstalk::filter_select("MUTATION_HOTSPOT", "Mutation hotspot", variants_tsgene_shared, ~MUTATION_HOTSPOT)
   ),
   list(
     crosstalk::filter_select("INTOGEN_DRIVER_MUT", "Predicted driver mutation", variants_tsgene_shared, ~INTOGEN_DRIVER_MUT)
@@ -72,7 +72,7 @@ variants_oncogene_shared <- crosstalk::SharedData$new(pcg_report[['snv_indel']][
 crosstalk::bscols(
   list(
     crosstalk::filter_select("CONSEQUENCE", "Consequence", variants_oncogene_shared, ~CONSEQUENCE),
-    crosstalk::filter_select("CANCER_MUTATION_HOTSPOT", "Mutation hotspot", variants_oncogene_shared, ~CANCER_MUTATION_HOTSPOT)
+    crosstalk::filter_select("MUTATION_HOTSPOT", "Mutation hotspot", variants_oncogene_shared, ~MUTATION_HOTSPOT)
   ),
   list(
     crosstalk::filter_select("INTOGEN_DRIVER_MUT", "Predicted driver mutation", variants_oncogene_shared, ~INTOGEN_DRIVER_MUT)
