--- a/src/R/pcgrr/inst/templates/bibliography.bib
+++ b/src/R/pcgrr/inst/templates/bibliography.bib
@@ -1,3 +1,105 @@
+@ARTICLE{Huang2018-ah,
+  title    = "Pathogenic Germline Variants in 10,389 Adult Cancers",
+  author   = "Huang, Kuan-Lin and Mashl, R Jay and Wu, Yige and Ritter, Deborah
+              I and Wang, Jiayin and Oh, Clara and Paczkowska, Marta and
+              Reynolds, Sheila and Wyczalkowski, Matthew A and Oak, Ninad and
+              Scott, Adam D and Krassowski, Michal and Cherniack, Andrew D and
+              Houlahan, Kathleen E and Jayasinghe, Reyka and Wang, Liang-Bo and
+              Zhou, Daniel Cui and Liu, Di and Cao, Song and Kim, Young Won and
+              Koire, Amanda and McMichael, Joshua F and Hucthagowder,
+              Vishwanathan and Kim, Tae-Beom and Hahn, Abigail and Wang, Chen
+              and McLellan, Michael D and Al-Mulla, Fahd and Johnson, Kimberly
+              J and {Cancer Genome Atlas Research Network} and Lichtarge,
+              Olivier and Boutros, Paul C and Raphael, Benjamin and Lazar,
+              Alexander J and Zhang, Wei and Wendl, Michael C and Govindan,
+              Ramaswamy and Jain, Sanjay and Wheeler, David and Kulkarni,
+              Shashikant and Dipersio, John F and Reimand, J{\"u}ri and
+              Meric-Bernstam, Funda and Chen, Ken and Shmulevich, Ilya and
+              Plon, Sharon E and Chen, Feng and Ding, Li",
+  abstract = "We conducted the largest investigation of predisposition variants
+              in cancer to date, discovering 853 pathogenic or likely
+              pathogenic variants in 8\% of 10,389 cases from 33 cancer types.
+              Twenty-one genes showed single or cross-cancer associations,
+              including novel associations of SDHA in melanoma and PALB2 in
+              stomach adenocarcinoma. The 659 predisposition variants and 18
+              additional large deletions in tumor suppressors, including ATM,
+              BRCA1, and NF1, showed low gene expression and frequent (43\%)
+              loss of heterozygosity or biallelic two-hit events. We also
+              discovered 33 such variants in oncogenes, including missenses in
+              MET, RET, and PTPN11 associated with high gene expression. We
+              nominated 47 additional predisposition variants from prioritized
+              VUSs supported by multiple evidences involving case-control
+              frequency, loss of heterozygosity, expression effect, and
+              co-localization with mutations and modified residues. Our
+              integrative approach links rare predisposition variants to
+              functional consequences, informing future guidelines of variant
+              classification and germline genetic testing in cancer.",
+  journal  = "Cell",
+  volume   =  173,
+  number   =  2,
+  pages    = "355--370.e14",
+  month    =  apr,
+  year     =  2018,
+  keywords = "LOH; cancer predisposition; germline and somatic genomes; variant
+              pathogenicity",
+  language = "en"
+}
+
+@ARTICLE{Richards2015-kj,
+  title    = "Standards and guidelines for the interpretation of sequence
+              variants: a joint consensus recommendation of the American
+              College of Medical Genetics and Genomics and the Association for
+              Molecular Pathology",
+  author   = "Richards, Sue and Aziz, Nazneen and Bale, Sherri and Bick, David
+              and Das, Soma and Gastier-Foster, Julie and Grody, Wayne W and
+              Hegde, Madhuri and Lyon, Elaine and Spector, Elaine and
+              Voelkerding, Karl and Rehm, Heidi L and {ACMG Laboratory Quality
+              Assurance Committee}",
+  abstract = "The American College of Medical Genetics and Genomics (ACMG)
+              previously developed guidance for the interpretation of sequence
+              variants.(1) In the past decade, sequencing technology has
+              evolved rapidly with the advent of high-throughput
+              next-generation sequencing. By adopting and leveraging
+              next-generation sequencing, clinical laboratories are now
+              performing an ever-increasing catalogue of genetic testing
+              spanning genotyping, single genes, gene panels, exomes, genomes,
+              transcriptomes, and epigenetic assays for genetic disorders. By
+              virtue of increased complexity, this shift in genetic testing has
+              been accompanied by new challenges in sequence interpretation. In
+              this context the ACMG convened a workgroup in 2013 comprising
+              representatives from the ACMG, the Association for Molecular
+              Pathology (AMP), and the College of American Pathologists to
+              revisit and revise the standards and guidelines for the
+              interpretation of sequence variants. The group consisted of
+              clinical laboratory directors and clinicians. This report
+              represents expert opinion of the workgroup with input from ACMG,
+              AMP, and College of American Pathologists stakeholders. These
+              recommendations primarily apply to the breadth of genetic tests
+              used in clinical laboratories, including genotyping, single
+              genes, panels, exomes, and genomes. This report recommends the
+              use of specific standard terminology-``pathogenic,'' ``likely
+              pathogenic,'' ``uncertain significance,'' ``likely benign,'' and
+              ``benign''-to describe variants identified in genes that cause
+              Mendelian disorders. Moreover, this recommendation describes a
+              process for classifying variants into these five categories based
+              on criteria using typical types of variant evidence (e.g.,
+              population data, computational data, functional data, segregation
+              data). Because of the increased complexity of analysis and
+              interpretation of clinical genetic testing described in this
+              report, the ACMG strongly recommends that clinical molecular
+              genetic testing should be performed in a Clinical Laboratory
+              Improvement Amendments-approved laboratory, with results
+              interpreted by a board-certified clinical molecular geneticist or
+              molecular genetic pathologist or the equivalent.",
+  journal  = "Genet. Med.",
+  volume   =  17,
+  number   =  5,
+  pages    = "405--424",
+  month    =  may,
+  year     =  2015,
+  language = "en"
+}
+
 @ARTICLE{Li2017-ew,
   title    = "Standards and Guidelines for the Interpretation and Reporting of
               Sequence Variants in Cancer: A Joint Consensus Recommendation of
