--- a/src/R/pcgrr/inst/templates/tier2.Rmd
+++ b/src/R/pcgrr/inst/templates/tier2.Rmd
@@ -18,8 +18,8 @@ if(NROW(pcg_report[['snv_indel']][['variant_display']][['tier2']][['hotspot']]) 
   if(NROW(pcg_report[['snv_indel']][['variant_display']][['tier2']][['hotspot']]) > 10){
     myOptions <- list(paging = T,pageLength=10, searching=T,caching=F,buttons = c('csv','excel'),dom = 'Bfrtip')
   }
-  DT::datatable(dplyr::select(pcg_report[['snv_indel']][['variant_display']][['tier2']][['hotspot']], CANCER_MUTATION_HOTSPOT,dplyr::everything()), options = myOptions, escape=F, extensions = c("Buttons","Responsive")) %>%
-  DT::formatStyle('CANCER_MUTATION_HOTSPOT', backgroundColor = 'black', color='white')
+  DT::datatable(dplyr::select(pcg_report[['snv_indel']][['variant_display']][['tier2']][['hotspot']], MUTATION_HOTSPOT,dplyr::everything()), options = myOptions, escape=F, extensions = c("Buttons","Responsive")) %>%
+  DT::formatStyle('MUTATION_HOTSPOT', backgroundColor = 'black', color='white')
 }else{
   cat('<i>No variants found.</i>',sep='\n')
   cat('\n')
@@ -41,7 +41,7 @@ if(NROW(pcg_report[['snv_indel']][['variant_display']][['tier2']][['curated_muta
   if(NROW(pcg_report[['snv_indel']][['variant_display']][['tier2']][['curated_mutation']]) > 10){
     myOptions <- list(paging = T,pageLength=10, searching=T,caching=F,buttons = c('csv','excel'),dom = 'Bfrtip')
   }
-  curated_mutations <- dplyr::select(pcg_report[['snv_indel']][['variant_display']][['tier2']][['curated_mutation']], -CANCER_MUTATION_HOTSPOT)
+  curated_mutations <- dplyr::select(pcg_report[['snv_indel']][['variant_display']][['tier2']][['curated_mutation']], -MUTATION_HOTSPOT)
   DT::datatable(dplyr::select(curated_mutations, DOCM_DISEASE, dplyr::everything()), options = myOptions, escape=F, extensions = c("Buttons","Responsive")) %>%
   DT::formatStyle('DOCM_DISEASE', backgroundColor = 'black', color = 'white')
 }else{
@@ -65,7 +65,7 @@ if(NROW(pcg_report[['snv_indel']][['variant_display']][['tier2']][['predicted_dr
   if(NROW(pcg_report[['snv_indel']][['variant_display']][['tier2']][['predicted_driver']]) > 10){
     myOptions <- list(paging = T,pageLength=10, searching=T,caching=F,buttons = c('csv','excel'),dom = 'Bfrtip')
   }
-  predicted_drivers <- dplyr::select(pcg_report[['snv_indel']][['variant_display']][['tier2']][['predicted_driver']], -c(INTOGEN_DRIVER_MUT, CANCER_MUTATION_HOTSPOT, DOCM_DISEASE, DOCM_LITERATURE))
+  predicted_drivers <- dplyr::select(pcg_report[['snv_indel']][['variant_display']][['tier2']][['predicted_driver']], -c(INTOGEN_DRIVER_MUT, MUTATION_HOTSPOT, DOCM_DISEASE, DOCM_LITERATURE))
   DT::datatable(dplyr::select(predicted_drivers, SYMBOL, CONSEQUENCE, dplyr::everything()),options = myOptions, escape=F, extensions = c("Buttons","Responsive")) %>%
   DT::formatStyle(columns = c('SYMBOL','CONSEQUENCE'), backgroundColor = 'black',color = 'white')
 }else{
