pcgrr minor fixes

--- a/src/R/pcgrr/bibliography.bib
+++ b/src/R/pcgrr/bibliography.bib
@@ -1,3 +1,54 @@
+@ARTICLE{Maxwell2016-mr,
+  title    = "Evaluation of {ACMG-Guideline-Based} Variant Classification of
+              Cancer Susceptibility and {Non-Cancer-Associated} Genes in
+              Families Affected by Breast Cancer",
+  author   = "Maxwell, Kara N and Hart, Steven N and Vijai, Joseph and
+              Schrader, Kasmintan A and Slavin, Thomas P and Thomas, Tinu and
+              Wubbenhorst, Bradley and Ravichandran, Vignesh and Moore, Raymond
+              M and Hu, Chunling and Guidugli, Lucia and Wenz, Brandon and
+              Domchek, Susan M and Robson, Mark E and Szabo, Csilla and
+              Neuhausen, Susan L and Weitzel, Jeffrey N and Offit, Kenneth and
+              Couch, Fergus J and Nathanson, Katherine L",
+  abstract = "Sequencing tests assaying panels of genes or whole exomes are
+              widely available for cancer risk evaluation. However, methods for
+              classification of variants resulting from this testing are not
+              well studied. We evaluated the ability of a
+              variant-classification methodology based on American College of
+              Medical Genetics and Genomics (ACMG) guidelines to define the
+              rate of mutations and variants of uncertain significance (VUS) in
+              180 medically relevant genes, including all ACMG-designated
+              reportable cancer and non-cancer-associated genes, in individuals
+              who met guidelines for hereditary cancer risk evaluation. We
+              performed whole-exome sequencing in 404 individuals in 253
+              families and classified 1,640 variants. Potentially clinically
+              actionable (likely pathogenic [LP] or pathogenic [P]) versus
+              nonactionable (VUS, likely benign, or benign) calls were 95\%
+              concordant with locus-specific databases and Clinvar. LP or P
+              mutations were identified in 12 of 25 breast cancer
+              susceptibility genes in 26 families without identified BRCA1/2
+              mutations (11\%). Evaluation of 84 additional genes associated
+              with autosomal-dominant cancer susceptibility identified LP or P
+              mutations in only two additional families (0.8\%). However,
+              individuals from 10 of 253 families (3.9\%) had incidental LP or
+              P mutations in 32 non-cancer-associated genes, and 9\% of
+              individuals were monoallelic carriers of a rare LP or P mutation
+              in 39 genes associated with autosomal-recessive cancer
+              susceptibility. Furthermore, 95\% of individuals had at least one
+              VUS. In summary, these data support the clinical utility of ACMG
+              variant-classification guidelines. Additionally, evaluation of
+              extended panels of cancer-associated genes in breast/ovarian
+              cancer families leads to only an incremental clinical benefit but
+              substantially increases the complexity of the results.",
+  journal  = "Am. J. Hum. Genet.",
+  volume   =  98,
+  number   =  5,
+  pages    = "801--817",
+  month    =  may,
+  year     =  2016,
+  language = "en"
+}
+
+
 @ARTICLE{Huang2018-ah,
   title    = "Pathogenic Germline Variants in 10,389 Adult Cancers",
   author   = "Huang, Kuan-Lin and Mashl, R Jay and Wu, Yige and Ritter, Deborah
