--- a/src/R/pcgrr/inst/templates/predispose/tier3_predispose.Rmd
+++ b/src/R/pcgrr/inst/templates/predispose/tier3_predispose.Rmd
@@ -2,23 +2,24 @@
 
 <br>
 
-The unclassified, coding variants have all been assigned a composite <i>pathogenicity score</i> (coined <b>PATHSCORE</b> in the tables below) according to the prioritization scheme developed in [CharGer](https://github.com/ding-lab/charger/) ([Huang et al., 2018](https://www.ncbi.nlm.nih.gov/pubmed/29625052)). Specifially, a cancer-specific adoption of previously established <b>ACMG</b> criteria for variant classification ([Richards et al., 2015](https://www.ncbi.nlm.nih.gov/pubmed/25741868)) has been implemented. The following ACMG evidence items indicate support for pathogenic/benign variants, and have been implemented as follows (points in parenthesis indicate how they contribute to overall PATHSCORE):  
+The unclassified, coding variants have all been assigned a composite <i>pathogenicity score</i> (coined <b>PATHSCORE</b> in the tables below) according to the prioritization scheme outlined in [CharGer](https://github.com/ding-lab/charger/) ([Huang et al., 2018](https://www.ncbi.nlm.nih.gov/pubmed/29625052)), as well as [Maxwell et al.,2016](https://www.ncbi.nlm.nih.gov/pubmed/27153395). Specifially, a cancer-specific adoption of previously established <b>ACMG</b> criteria for variant classification ([Richards et al., 2015](https://www.ncbi.nlm.nih.gov/pubmed/25741868)) has been implemented. The following ACMG evidence items indicate support for pathogenic/benign variants, and have been implemented as follows (points in parenthesis indicate how they contribute to overall PATHSCORE):  
 
-* PVS1 (<b>8</b>) - null variant (nonsense, frameshift, canonical ±1 or 2 splice sites, initiation codon) in a gene where LoF is a known mechanism of disease (dominant mode of inheritance, tumor supressor genes only)
+* PVS1 (<b>8</b>) - null variant (nonsense, frameshift, canonical ±1 or 2 splice sites, initiation codon) in a gene where LoF is a known mechanism of disease (dominant mode of inheritance (MoI))
 * PS1 (<b>7</b>) - Same amino acid change as a previously established pathogenic variant ([ClinVar](https://www.ncbi.nlm.nih.gov/clinvar/)) regardless of nucleotide change
-* PSC1 (<b>4</b>) - null variant (nonsense, frameshift, canonical ±1 or 2 splice sites, initiation codon) in a gene where LoF is a known mechanism of disease (recessive mode of inheritance, tumor suppressor genes only)
-* PMC1 (<b>2</b>) - null variant (nonsense, frameshift, canonical ±1 or 2 splice sites, initiation codon) in known susceptibility gene (non-tumor suppressor)
+* PSC1 (<b>4</b>) - null variant (nonsense, frameshift, canonical ±1 or 2 splice sites, initiation codon) in a gene where LoF is a known mechanism of disease (recessive MoI)
+* PMC1 (<b>2</b>) - null variant (nonsense, frameshift, canonical ±1 or 2 splice sites, initiation codon) in a gene where LoF is NOT the known mechanism of disease
 * PM1 (<b>2</b>) - Located in a somatic mutational hotspot (cancerhotspots.org) 
 * PM2 (<b>2</b>) - Absence/extremely low frequency (MAF < 0.0005 in [1000 Genomes Project](http://www.internationalgenome.org/)/[gnomAD](http://gnomad.broadinstitute.org/) global population)
-* PM4 (<b>2</b>) - Protein length changes due to inframe indels or stoploss variants in known susceptibility gene (dominant MOI)
+* PM4 (<b>2</b>) - Protein length changes due to inframe indels or stoploss variants in known susceptibility gene (dominant MoI)
 * PM5 (<b>2</b>) - Novel missense change at an amino acid residue where a different missense change determined to be pathogenic has been seen before ([ClinVar](https://www.ncbi.nlm.nih.gov/clinvar/))
-* PP2 (<b>1</b>) - Missense variant in known susceptibility gene
+* PP2 (<b>1</b>) - Missense variant in a gene that has a relatively low rate of benign missense variation and where missense variants are a common mechanism of disease
 * PP3 (<b>1</b>) - Multiple lines of computational evidence support a deleterious effect on the gene or gene product (conservation, evolutionary, splicing impact, etc., from [dbNSFP](https://sites.google.com/site/jpopgen/dbNSFP))
-* PPC1 (<b>1</b>) - Protein length changes due to inframe indels or stoploss variants in known susceptibility gene (recessive MOI)
+* PPC1 (<b>1</b>) - Protein length changes due to inframe indels or stoploss variants in known susceptibility gene (recessive MoI)
 * BP4 (<b>-1</b>) - Multiple lines (>1) of in silico evidence of none deleterious effect.
 * BMC1 (<b>-2</b>) - Peptide change is at the same location of a known benign change ([ClinVar](https://www.ncbi.nlm.nih.gov/clinvar/))
 * BSC1 (<b>-6</b>) - Peptide change is known to be benign ([ClinVar](https://www.ncbi.nlm.nih.gov/clinvar/))
 * BA1 (<b>-8</b>) - High allele frequency in the general population (MAF > 0.05 in [1000 Genomes Project](http://www.internationalgenome.org/)/[gnomAD](http://gnomad.broadinstitute.org/) global population)
+    * Exception for susceptibility genes HPE and SERPINA1, requiring MAF > 0.25
 
 
 The composite PATHSCORE is finally assigned one of four different <b>PATHRANK</b> levels:
