--- a/src/R/pcgrr/bibliography.bib
+++ b/src/R/pcgrr/bibliography.bib
@@ -1,3 +1,58 @@
+@ARTICLE{Amendola2016-pu,
+  title    = "Performance of {ACMG-AMP} {Variant-Interpretation} Guidelines
+              among Nine Laboratories in the Clinical Sequencing Exploratory
+              Research Consortium",
+  author   = "Amendola, Laura M and Jarvik, Gail P and Leo, Michael C and
+              McLaughlin, Heather M and Akkari, Yassmine and Amaral, Michelle D
+              and Berg, Jonathan S and Biswas, Sawona and Bowling, Kevin M and
+              Conlin, Laura K and Cooper, Greg M and Dorschner, Michael O and
+              Dulik, Matthew C and Ghazani, Arezou A and Ghosh, Rajarshi and
+              Green, Robert C and Hart, Ragan and Horton, Carrie and Johnston,
+              Jennifer J and Lebo, Matthew S and Milosavljevic, Aleksandar and
+              Ou, Jeffrey and Pak, Christine M and Patel, Ronak Y and Punj,
+              Sumit and Richards, Carolyn Sue and Salama, Joseph and Strande,
+              Natasha T and Yang, Yaping and Plon, Sharon E and Biesecker,
+              Leslie G and Rehm, Heidi L",
+  abstract = "Evaluating the pathogenicity of a variant is challenging given
+              the plethora of types of genetic evidence that laboratories
+              consider. Deciding how to weigh each type of evidence is
+              difficult, and standards have been needed. In 2015, the American
+              College of Medical Genetics and Genomics (ACMG) and the
+              Association for Molecular Pathology (AMP) published guidelines
+              for the assessment of variants in genes associated with Mendelian
+              diseases. Nine molecular diagnostic laboratories involved in the
+              Clinical Sequencing Exploratory Research (CSER) consortium
+              piloted these guidelines on 99 variants spanning all categories
+              (pathogenic, likely pathogenic, uncertain significance, likely
+              benign, and benign). Nine variants were distributed to all
+              laboratories, and the remaining 90 were evaluated by three
+              laboratories. The laboratories classified each variant by using
+              both the laboratory's own method and the ACMG-AMP criteria. The
+              agreement between the two methods used within laboratories was
+              high (K-alpha = 0.91) with 79\% concordance. However, there was
+              only 34\% concordance for either classification system across
+              laboratories. After consensus discussions and detailed review of
+              the ACMG-AMP criteria, concordance increased to 71\%. Causes of
+              initial discordance in ACMG-AMP classifications were identified,
+              and recommendations on clarification and increased specification
+              of the ACMG-AMP criteria were made. In summary, although an
+              initial pilot of the ACMG-AMP guidelines did not lead to
+              increased concordance in variant interpretation, comparing
+              variant interpretations to identify differences and having a
+              common framework to facilitate resolution of those differences
+              were beneficial for improving agreement, allowing iterative
+              movement toward increased reporting consistency for variants in
+              genes associated with monogenic disease.",
+  journal  = "Am. J. Hum. Genet.",
+  volume   =  98,
+  number   =  6,
+  pages    = "1067--1076",
+  month    =  jun,
+  year     =  2016,
+  language = "en"
+}
+
+
 @ARTICLE{Maxwell2016-mr,
   title    = "Evaluation of {ACMG-Guideline-Based} Variant Classification of
               Cancer Susceptibility and {Non-Cancer-Associated} Genes in
